added challenges endpoint

--- a/.aws-sam/build.toml
+++ b/.aws-sam/build.toml
@@ -7,6 +7,6 @@ architecture = "x86_64"
 handler = "src/handlers/get_all_games.getAllGamesHandler"
 manifest_hash = ""
 packagetype = "Zip"
-functions = ["getAllGamesFunction", "getGameByIdFunction", "deleteGameFunction", "putGameFunction"]
+functions = ["getAllGamesFunction", "getGameByIdFunction", "deleteGameFunction", "putGameFunction", "getAllChallengesFunction"]
 
 [layer_build_definitions]
